feat: add localization for motion selection in multiple languages
- Added "pleaseSelectMotion" key to English, Japanese, Simplified Chinese, and Traditional Chinese localization files to prompt users to select a motion first.
- Updated the configuration manager to default to mainland (False) when ip_country is empty for improved region detection.

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -651,6 +651,7 @@
     "selectModel": "Model",
     "pleaseSelect": "Please select a model",
     "pleaseSelectModel": "Please select a model",
+    "pleaseSelectMotion": "Please select a motion first",
     "selectMotion": "Animation",
     "selectExpression": "Expression",
     "addMotion": "Add Motion",
