--- a/static/locales/zh-CN.json
+++ b/static/locales/zh-CN.json
@@ -669,6 +669,7 @@
     "selectModel": "选择模型",
     "pleaseSelect": "选择模型",
     "pleaseSelectModel": "选择模型",
+    "pleaseSelectMotion": "请先选择动作",
     "selectMotion": "选择动作",
     "selectExpression": "选择表情",
     "addMotion": "增加动作",
