--- a/static/locales/zh-TW.json
+++ b/static/locales/zh-TW.json
@@ -668,6 +668,7 @@
     "selectModel": "選擇模型",
     "pleaseSelect": "選擇模型",
     "pleaseSelectModel": "選擇模型",
+    "pleaseSelectMotion": "請先選擇動作",
     "selectMotion": "選擇動作",
     "selectExpression": "選擇錶情",
     "addMotion": "增加動作",
