Feature vrm头部跟踪，待机动作控件，修改了默认光照参数，添加了一些新的vrma文件。 (#325)
* 添加更加生动的动作

* 添加待机动作控件

* 模型静止状态下头部跟踪实现

* 头部跟踪实现

* fix：解决存在暂时性死区问题

* 修改初始默认的环境光，主光源，曝光强度，尽量适应大多数模型

* fix修复头/颈旋转会累计漂移；切模型后首帧可能出现不自然偏转或过渡抖动等问题

* 首帧会看向屏幕中心而非左上角

* 避免待机动作列表并发加载导致选中值被覆盖，TDZ 问题

* 切换待机动作时手动动作按钮会正确回到"播放"图标状态

* 避免用 loop 自动推断待机状态喵

* 清理所有预分配的 THREE.js 对象喵～

* fix：model_manager.js 的 VRM 模块加载会与 vrm-init.js 重复加载同一批脚本，导致资源浪费和潜在状态冲突喵！

* 解决鼠标经过模型时卡顿情况

* 进入设置项中自动播放预存动作

* 在 fallback 时跳过无效项

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1355,6 +1355,11 @@
       "saveFailed": "Save failed",
       "lightingReset": "Lighting settings reset to default",
       "lightingApplied": "Preset applied: {{name}}"
+    },
+    "idleAnimation": {
+      "title": "Idle Animation",
+      "changed": "Idle animation changed: {{name}}",
+      "changeFailed": "Failed to change idle animation"
     }
   },
   "modelManager": {
@@ -1534,7 +1539,6 @@
         "note": "If you don't see it, expand the tray arrow to show hidden icons.",
         "alt": "System tray location example"
       },
-
       "menu": {
         "title": "📋 Tray Menu",
         "desc": "You'll find a N.E.K.O icon in the bottom-right tray. Right-click it to see many options. Here are two commonly used features:"
