--- a/static/locales/ja.json
+++ b/static/locales/ja.json
@@ -1357,6 +1357,11 @@
       "saveFailed": "保存に失敗しました",
       "lightingReset": "ライティング設定がデフォルトにリセットされました",
       "lightingApplied": "プリセットが適用されました: {{name}}"
+    },
+    "idleAnimation": {
+      "title": "待機アニメーション",
+      "changed": "待機アニメーションを切り替えました: {{name}}",
+      "changeFailed": "待機アニメーションの切り替えに失敗しました"
     }
   },
   "modelManager": {
@@ -1536,7 +1541,6 @@
         "note": "見当たらない場合は、トレイの小さな矢印を開いて表示してください。",
         "alt": "システムトレイ位置の例"
       },
-
       "menu": {
         "title": "📋 トレイメニュー",
         "desc": "画面右下のトレイにN.E.K.Oのアイコンがあります。右クリックすると多くの項目が表示されます。よく使う2つの機能はこちら："
