refactor: enhance proactive chat and UI responsiveness
- Updated proactive chat prompts to include detailed debug information for better tracking.
- Improved handling of recent proactive chat messages to avoid repetition, with updated headers and footers in multiple languages.
- Refined UI elements in various CSS files for consistent sticky positioning and z-index management.
- Added a warning for free model users in the agent mode to prevent blocking issues, with translations in multiple languages.
- Enhanced the cookies login page layout for better user experience and accessibility.

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1297,7 +1297,8 @@
             "disabledError": "Agent mode disabled (partial cleanup failed)",
             "enableFailed": "Enable failed",
             "disconnected": "Server connection lost",
-            "agentDisconnected": "Agent server connection lost"
+            "agentDisconnected": "Agent server connection lost",
+            "freeModelWarning": "Due to quota limitations, free models are prone to blocking in Agent mode. It is recommended to switch to a paid model."
         },
         "taskHud": {
             "title": "Agent Tasks",
