--- a/static/locales/zh-CN.json
+++ b/static/locales/zh-CN.json
@@ -1297,7 +1297,8 @@
             "disabledError": "Agent模式已关闭（部分清理失败）",
             "enableFailed": "开启失败",
             "disconnected": "服务器连接已断开",
-            "agentDisconnected": "Agent 服务器连接已断开"
+            "agentDisconnected": "Agent 服务器连接已断开",
+            "freeModelWarning": "由于限额问题，免费模型使用Agent模式容易阻塞，建议您切换至自费模型"
         },
         "taskHud": {
             "title": "Agent 任务",
