解决调整画质导致的语音按钮与屏幕共享按钮状态重置的问题;添加鼠标跟踪开关 (#371)
* 解决调整画质导致的语音按钮与屏幕共享按钮状态重置的问题

* 为悬浮菜单动画设置中添加一个鼠标跟踪开关

* 解决部分问题:禁用跟踪后可能残留头/颈姿态;“始终启用监听器”的实现与注释不一致;mouseTrackingEnabled 只在已保存配置分支初始化，首次启动会有未定义状态

* 鼠标跟踪开关只在构建时初始化，后续可能出现“显示旧状态”

---------

Co-authored-by: Hongzhi Wen <wenguanjung@aliyun.com>

--- a/static/locales/ja.json
+++ b/static/locales/ja.json
@@ -1319,7 +1319,8 @@
             "frameRate": "フレームレート",
             "frameRateLow": "30fps",
             "frameRateMedium": "45fps",
-            "frameRateHigh": "60fps"
+            "frameRateHigh": "60fps",
+            "mouseTracking": "マウス追跡"
         }
     },
     "subtitle": {
