--- a/static/locales/ko.json
+++ b/static/locales/ko.json
@@ -1319,7 +1319,8 @@
             "frameRate": "프레임 레이트",
             "frameRateLow": "30fps",
             "frameRateMedium": "45fps",
-            "frameRateHigh": "60fps"
+            "frameRateHigh": "60fps",
+            "mouseTracking": "마우스 추적"
         }
     },
     "subtitle": {
