--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -1319,7 +1319,8 @@
             "renderQuality": "Качество рендеринга",
             "renderQualityHigh": "Высокое",
             "renderQualityLow": "Низкое",
-            "renderQualityMedium": "Среднее"
+            "renderQualityMedium": "Среднее",
+            "mouseTracking": "Отслеживание мыши"
         }
     },
     "subtitle": {
