--- a/static/locales/zh-TW.json
+++ b/static/locales/zh-TW.json
@@ -1319,7 +1319,8 @@
             "frameRate": "幀率",
             "frameRateLow": "30fps",
             "frameRateMedium": "45fps",
-            "frameRateHigh": "60fps"
+            "frameRateHigh": "60fps",
+            "mouseTracking": "跟蹤滑鼠"
         }
     },
     "subtitle": {
