--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1319,7 +1319,8 @@
             "frameRate": "Frame Rate",
             "frameRateLow": "30fps",
             "frameRateMedium": "45fps",
-            "frameRateHigh": "60fps"
+            "frameRateHigh": "60fps",
+            "mouseTracking": "Mouse Tracking"
         }
     },
     "subtitle": {
